--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ script:
   - coverage run setup.py test -a "--doctest-modules --pep8 -v tests/"
 
 after_success:
-  - coverage report -m --include="storj/*.py"
+  - coverage report -m
+  - coverage report -m --include="storj/messaging.py"
   - pip install cpp-coveralls
   - coveralls --exclude tests --exclude telehash-c --exclude libtap --exclude cxx/telehashbinder_python.cpp --gcov-options '\-lp'
   - LD_LIBRARY_PATH=libtap G_SLICE=always-malloc G_DEBUG=gc-friendly  valgrind -v --tool=memcheck --leak-check=full --show-reachable=yes --log-file=a.log --num-callers=40 ./test
