--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,14 @@ before_install:
   - git submodule update --init --recursive
   - pip install coverage coveralls
   - make test
-  - python setup.py install
 
 script:
   - LD_LIBRARY_PATH=libtap ./test
-  - coverage run --source=storj setup.py test -a "--doctest-modules --pep8 -v tests/"
+  - coverage run --source=storj setup.py test -a "--doctest-modules --pep8 -v tests/ storj/"
 
 after_success:
-  - coverage report -m
-  - coverage report -m --include="storj/messaging.py"
+  - coverage report -m --include="storj/*.py"
+  - python setup.py install
   - pip install cpp-coveralls
   - coveralls --exclude tests --exclude telehash-c --exclude libtap --exclude cxx/telehashbinder_python.cpp --gcov-options '\-lp'
   - LD_LIBRARY_PATH=libtap G_SLICE=always-malloc G_DEBUG=gc-friendly  valgrind -v --tool=memcheck --leak-check=full --show-reachable=yes --log-file=a.log --num-callers=40 ./test
